[gd_scene load_steps=17 format=3 uid="uid://r5l86nllt4t8"]

[ext_resource type="Script" path="res://scripts/tutorial_stage.gd" id="1_6ky6f"]
[ext_resource type="PackedScene" uid="uid://bnvhtvhkiqiom" path="res://nodes/floor_block.tscn" id="1_sxtu6"]
[ext_resource type="PackedScene" uid="uid://cf5tjf413rmov" path="res://Player.tscn" id="2_q75mu"]
[ext_resource type="PackedScene" uid="uid://d14ssrntmjs4e" path="res://nodes/red_flag.tscn" id="4_qq1a4"]

[sub_resource type="Environment" id="Environment_0ft2b"]
background_mode = 1
background_color = Color(0.305882, 0.305882, 0.392157, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_rph8q"]
size = Vector3(16, 1, 128)

[sub_resource type="BoxMesh" id="BoxMesh_tf7kw"]
size = Vector3(16, 1, 128)

[sub_resource type="BoxShape3D" id="BoxShape3D_avvk7"]
size = Vector3(16, 128, 32)

[sub_resource type="BoxMesh" id="BoxMesh_6dm63"]
size = Vector3(16, 128, 32)

[sub_resource type="Animation" id="Animation_k3c28"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_duqlx"]
resource_name = "moving"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 2.5, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -16, 0), Vector3(0, -16, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i5ehr"]
_data = {
"RESET": SubResource("Animation_k3c28"),
"moving": SubResource("Animation_duqlx")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_iqgxw"]
size = Vector3(16, 128, 32)

[sub_resource type="Animation" id="Animation_uejhr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8ysko"]
resource_name = "spinning"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_80hml"]
_data = {
"RESET": SubResource("Animation_uejhr"),
"spinning": SubResource("Animation_8ysko")
}

[node name="Tutorial_stage" type="Node3D"]
script = ExtResource("1_6ky6f")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0ft2b")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.918559, -0.25, -0.306186, -0.353553, 0.866025, 0.353553, 0.176777, 0.433013, -0.883883, -16, 100, -88)

[node name="Map" type="Node3D" parent="."]

[node name="FloorBlock" parent="Map" instance=ExtResource("1_sxtu6")]

[node name="FloorBlock2" parent="Map" instance=ExtResource("1_sxtu6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 144)

[node name="FloorBlock3" parent="Map" instance=ExtResource("1_sxtu6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 176.685)

[node name="FloorBlock4" parent="Map" instance=ExtResource("1_sxtu6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 231.691)

[node name="FloorBlock5" parent="Map" instance=ExtResource("1_sxtu6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 0, 287.691)

[node name="FloorBlock6" parent="Map" instance=ExtResource("1_sxtu6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38, 0, 302.691)

[node name="FloorBlock7" parent="Map" instance=ExtResource("1_sxtu6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 81, 0, 322.691)

[node name="FloorBlock8" parent="Map" instance=ExtResource("1_sxtu6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 81, 0, 338.691)

[node name="FloorBlock9" parent="Map" instance=ExtResource("1_sxtu6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 81, 0, 354.691)

[node name="FloorBlock10" parent="Map" instance=ExtResource("1_sxtu6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 44, 0, 388.691)

[node name="FloorBlock11" parent="Map" instance=ExtResource("1_sxtu6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 434.691)

[node name="FloorBlock12" parent="Map" instance=ExtResource("1_sxtu6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 33, 0, 460.691)

[node name="LongFloor" type="StaticBody3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 72)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/LongFloor"]
shape = SubResource("BoxShape3D_rph8q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/LongFloor/CollisionShape3D"]
mesh = SubResource("BoxMesh_tf7kw")

[node name="CrushingCeiling" type="StaticBody3D" parent="Map" groups=["crushing_ceiling"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 80, 25)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/CrushingCeiling"]
shape = SubResource("BoxShape3D_avvk7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/CrushingCeiling/CollisionShape3D"]
mesh = SubResource("BoxMesh_6dm63")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Map/CrushingCeiling"]
autoplay = "moving"
libraries = {
"": SubResource("AnimationLibrary_i5ehr")
}

[node name="CrouchingCeiling" type="StaticBody3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 66, 117)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/CrouchingCeiling"]
shape = SubResource("BoxShape3D_iqgxw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/CrouchingCeiling/CollisionShape3D"]
mesh = SubResource("BoxMesh_6dm63")

[node name="CrouchingCeiling2" type="StaticBody3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 86, 66, 323)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/CrouchingCeiling2"]
shape = SubResource("BoxShape3D_iqgxw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/CrouchingCeiling2/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 20)
mesh = SubResource("BoxMesh_6dm63")

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(-0.950927, 0, 0.309415, 0, 1, 0, -0.309415, 0, -0.950927, 2.55349, 0.903179, -4.7381)

[node name="CharacterBody3D" parent="." instance=ExtResource("2_q75mu")]
transform = Transform3D(-0.950927, 0, 0.309415, 0, 1, 0, -0.309415, 0, -0.950927, -6, 2, 0)

[node name="DashLabel3D" type="Label3D" parent="."]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 25, 5, 1)
text = "Hold Shift to dash"
font_size = 512
outline_size = 64

[node name="CrouchLabel3D" type="Label3D" parent="."]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 25, 5, 82)
text = "Hold Shift to dash"
font_size = 512
outline_size = 64

[node name="JumpLabel3D" type="Label3D" parent="."]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 25, 5, 149)
text = "Press Space to Jump"
font_size = 512
outline_size = 64

[node name="DoubleJumpLabel3D" type="Label3D" parent="."]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 25, 5, 209)
text = "Press Space to Jump"
font_size = 512
outline_size = 64

[node name="FinishLineLabel3D" type="Label3D" parent="."]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 25, 5, 260.761)
text = "Now reach the red flag!"
font_size = 512
outline_size = 64

[node name="RedFlag" parent="." instance=ExtResource("4_qq1a4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 2, 467)

[node name="AnimationPlayer" type="AnimationPlayer" parent="RedFlag"]
autoplay = "spinning"
libraries = {
"": SubResource("AnimationLibrary_80hml")
}
